News Website example

--- a/html-basics.html
+++ b/html-basics.html
@@ -13,9 +13,9 @@
     <title>HTML-Basics</title>
 
     <style>
-        li{
+        /* li{
             display: inline;
-        }
+        } */
 
         nav{
             background-color: brown;
@@ -52,9 +52,11 @@
         </ul>
     </nav>
 
-   
+   <!-- semantic elements -->
 
-    <address></address>
+    <address>
+        Bandal Capital, Kothrud, Pune
+    </address>
     <!-- <div class="navigation-bar">
         <ul>
             <li>Home</li>
@@ -67,16 +69,15 @@
         block level elements 
         inline level elements
     </p>
-    <p>L</p>
+    <p>Codekul</p>
 
     <span>
         block level elements 
         inline level elements
-    </span>
+    </span> <br>
 
-    <span>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis fugit officia, neque maxime ab debitis quasi deserunt earum molestias dolor sed maiores delectus deleniti qui itaque odit totam vitae eveniet!
-    </span>
+   <span>Codekul</span>
+
 
     
     <footer>
