Iframe and Target attribute

--- a/html-basics.html
+++ b/html-basics.html
@@ -45,7 +45,7 @@
 
     <nav>
         <ul>
-            <li>Home</li>
+            <li><a target="_top" href="http://www.bbc.com">Home</a></li>
             <li>About</li>
             <li>Blog</li>
             <li>Contact</li>
