--- a/css/css-intro.html
+++ b/css/css-intro.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css-intro.css">
 </head>
 
@@ -21,14 +24,23 @@
     </div>
 
     <h2>News</h2>
+    <i class="fab fa-accessible-icon"></i>
 
     <section class="sports">
 
-        <h2>Sports News</h2>
+        <h2 title="sports-news-heading">Sports News</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatum dolorum excepturi quibusdam,
             vitae nam eum suscipit obcaecati nulla nisi! Sunt architecto pariatur nihil eum asperiores sit fugit in
             placeat.</p>
+
+            <a title="codekul-link" href="http://www.codekul.com">Codekul</a>
+
+            <a title="maha-gov-link" href="https://www.maharashtra.gov.in/">Maharashtra government</a>
+
+            <a title="india-today-link" href="https://www.indiatoday.in/">IndiaToday Website</a>
+
+            <a title="bbc-link" href="https://www.bbc.com/">BBC</a>
 
         <div>
             <h3>Cricket</h3>
