--- a/css/css-intro.html
+++ b/css/css-intro.html
@@ -36,11 +36,11 @@
 
             <a title="codekul-link" href="http://www.codekul.com">Codekul</a>
 
-            <a title="maha-gov-link" href="https://www.maharashtra.gov.in/">Maharashtra government</a>
+            <a title="maha-gov-link" href="https://www.maharashtra.gov.in">Maharashtra government</a>
 
-            <a title="india-today-link" href="https://www.indiatoday.in/">IndiaToday Website</a>
+            <a title="india-today-link" href="https://www.indiatoday.in">IndiaToday Website</a>
 
-            <a title="bbc-link" href="https://www.bbc.com/">BBC</a>
+            <a title="bbc-link" href="https://www.bbc.com">BBC</a>
 
         <div>
             <h3>Cricket</h3>
