--- a/grid.html
+++ b/grid.html
@@ -14,6 +14,7 @@
             display: grid;
             /* grid-template-columns: 70% 200px 1fr 1fr; */
             grid-template-columns: 500px repeat(4, 2fr);
+            grid-template-columns: minmax(200px, 1fr) 300px;
             grid-template-rows: 200px 200px;
             grid-gap: 20px;
             /* justify-content:center; */
@@ -29,7 +30,9 @@
 
         .one{
             grid-row-start: 1;
-            grid-row-end:3
+            grid-row-end:3;
+
+            grid-row: 1/3;
 
             /* grid-column-start: 1;
             grid-column-end:3 */
