transform, transition and animation

--- a/transform-ex.html
+++ b/transform-ex.html
@@ -26,6 +26,14 @@
             transform: translateY(-400px);
             transition-duration: 7s;
 
+            /* transform: rotateX(37deg); */
+            transform: rotateY(60deg);
+
+
+            transform: translateX(400px)  skewY(60deg);
+
+
+            transform: scale(2) translateX(400px)  skewY(60deg);
         }
     </style>
 </head>
